updating preface for JSON article and fixing code annotation highlight overflow issue

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -102,3 +102,12 @@ nav#TOC {
 div.jse-tree-mode {
     background-color: #f9f5ff !important;
 }
+
+#code-annotation-line-highlight {
+    max-width: 100% !important;
+    margin: 0 !important;
+}
+
+.light-font {
+    font-weight: lighter
+}
